# web3-anywhere

./: Cargo.toml  README.md
key-man/: Cargo.toml
key-man/src/: browser_local_storage_key_store.rs  in_memory_key_store.rs  in_memory_signer.rs  key_pair.rs  key_store.rs  lib.rs  signer.rs  storage_key.rs
near-primitives/: Cargo.toml
near-primitives/src/: lib.rs  trie_key.rs
near-primitives/src/access_key/: access_key_changes.rs  access_key_info_view.rs  access_key_list.rs  access_key_permission_view.rs  access_key_view.rs  access_key_with_public_key.rs  mod.rs
near-primitives/src/account/: account_changes.rs  account_view.rs  account_with_public_key.rs  mod.rs
near-primitives/src/actions/: action.rs  action_view.rs  add_key_action.rs  create_account_action.rs  delete_account_action.rs  delete_key_action.rs  deploy_contract_action.rs  function_call_action.rs  mod.rs  stake_action.rs  transfer_action.rs
near-primitives/src/block/: block.rs  block_header.rs  block_header_inner_lite_view.rs  block_header_view.rs  block_view.rs  mod.rs
near-primitives/src/challenge/: challenge.rs  challenge_body.rs  mod.rs
near-primitives/src/config/: mod.rs  runtime_config.rs
near-primitives/src/contract/: contract_code_changes.rs  contract_code_view.rs  contract_state_changes.rs  mod.rs
near-primitives/src/errors/: action_error.rs  action_error_kind.rs  actions_validation_error.rs  invalid_access_key_error.rs  invalid_tx_error.rs  mod.rs  receipt_validation_error.rs  tx_execution_error.rs
near-primitives/src/light_client/: light_client_block_lite_view.rs  mod.rs  (+5 more)
(+121 files in other folders)
