[package]
name = "web3-anywhere-near-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Russell Wong"]

[dependencies]
web3-anywhere-json-rpc-client = { path = "../json-rpc-client" }
web3-anywhere-crypto = {path = "../crypto" }

base64 = "0.13.0"
borsh = "0.9.3"
bs58 = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
easy-ext = "1"
log = "0.4"
near-primitives-core = { git = "https://github.com/near/nearcore.git",  branch = "1.29.0"}
primitive-types = "0.11.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
sha2 = "0.10.2"
smart-default = "0.6.0"
thiserror = "1.0.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
